streamlit app cahnges

--- a/app/.ebextensions/02_nginx.config
+++ b/app/.ebextensions/02_nginx.config
@@ -6,15 +6,11 @@ files:
     content: |
       client_max_body_size 20M;
       
-      upstream streamlit {
-        server 127.0.0.1:8000;
-      }
-      
       server {
         listen 80;
         
         location / {
-          proxy_pass http://streamlit;
+          proxy_pass http://127.0.0.1:8000;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $host;
           proxy_redirect off;
@@ -24,19 +20,19 @@ files:
         }
         
         location ^~ /static/ {
-          proxy_pass http://streamlit/static/;
+          proxy_pass http://127.0.0.1:8000/static/;
         }
         
         location ^~ /healthcheck {
-          proxy_pass http://streamlit/healthcheck;
+          proxy_pass http://127.0.0.1:8000/healthcheck;
         }
         
         location ^~ /vendor {
-          proxy_pass http://streamlit/vendor;
+          proxy_pass http://127.0.0.1:8000/vendor;
         }
         
         location ^~ /st-file-uploader {
-          proxy_pass http://streamlit/st-file-uploader;
+          proxy_pass http://127.0.0.1:8000/st-file-uploader;
         }
       }
 
