--- a/app/.platform/nginx/conf.d/elasticbeanstalk/01_streamlit.conf
+++ b/app/.platform/nginx/conf.d/elasticbeanstalk/01_streamlit.conf
@@ -1,13 +1,8 @@
-upstream streamlit {
-    server 127.0.0.1:8000;
-    keepalive 256;
-}
-
 server {
     listen 80;
 
     location / {
-        proxy_pass http://streamlit;
+        proxy_pass http://127.0.0.1:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -20,16 +15,16 @@ server {
     
     # Serve static files directly
     location ^~ /static/ {
-        proxy_pass http://streamlit/static/;
+        proxy_pass http://127.0.0.1:8000/static/;
     }
     
     # Support Streamlit's file uploader
     location ^~ /st-file-uploader {
-        proxy_pass http://streamlit/st-file-uploader;
+        proxy_pass http://127.0.0.1:8000/st-file-uploader;
     }
     
     # Support vendor files
     location ^~ /vendor {
-        proxy_pass http://streamlit/vendor;
+        proxy_pass http://127.0.0.1:8000/vendor;
     }
 }
