--- a/.ebextensions/01_nginx.config
+++ b/.ebextensions/01_nginx.config
@@ -1,13 +1,13 @@
 files:
-  "/etc/nginx/conf.d/00_application.conf":
+  "/etc/nginx/conf.d/elasticbeanstalk/01_streamlit.conf":
     mode: "000644"
     owner: root
     group: root
     content: |
-      # HTTP server configuration
+      # Streamlit application
       server {
         listen 80;
-
+        
         location / {
           proxy_pass http://127.0.0.1:8000;
           proxy_http_version 1.1;
@@ -17,10 +17,6 @@ files:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_read_timeout 86400;
+          proxy_buffering off;
         }
       }
-
-commands:
-  01_restart_nginx:
-    command: "service nginx restart"
